test/files/neg/ambiguous-float-dots2.scala
class A {
  val x0 = 5.
  val x1 = 5.f
  val y0 = 055

  1.+(2)
  1. + 2
  1 + 2
}